# rust-raft-log

./: .gitignore  Cargo.toml  README.md  build.rs  cluster_config.yaml  inspect_raft_logs.sh  run_cluster.sh  test_log_rotation.sh
examples/: basic_usage.rs  grpc_raft_example.rs  raft_leader_election_example.rs
proto/: raft.proto
src/: error.rs  io.rs  lib.rs  log.rs  log_entry.rs  main.rs  raft_log.rs  segment.rs  segment_header.rs  utils.rs
src/consensus/: mod.rs  node.rs  state.rs
src/grpc/: client.rs  conversion.rs  event_loop.rs  mod.rs  server.rs  service.rs
src/log/: entry.rs  header.rs  log_file_segment.rs  log_file_segment_header.rs  mmap_utils.rs  mod.rs  models.rs  raft_log.rs  raft_node.rs  raft_rpc.rs  raft_state.rs  segment.rs  utils.rs
src/models/: conversions.rs  mod.rs  types_proto.rs  types_rpc.rs
src/storage/: log.rs  mod.rs  segment.rs
tests/: comprehensive_raft_lifecycle.rs  election_timeout_variance.rs  focused_raft_lifecycle.rs  integration_leader_election.rs  integration_tests.rs
