[package]
name = "rust-raft-log"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Raft log implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-raft-log"
keywords = ["raft", "consensus", "distributed", "log", "storage"]
categories = ["database", "data-structures"]

[dependencies]
# Error handling
thiserror = "1.0"

# Checksums
crc32fast = "1.3"

# Binary I/O with endianness support
byteorder = "1.5"

# High-performance synchronization primitives
parking_lot = "0.12"
memmap2 = "0.9.8"
log = "0.4.28"

# gRPC and async runtime
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"

# Random number generation for election timeouts
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
proptest = "1.4"
rand = "0.8"

[build-dependencies]
tonic-prost-build = "0.14.2"

[lib]
name = "raft_log"
path = "src/lib.rs"

[[bin]]
name = "rust-raft-log"
path = "src/main.rs"

[[bin]]
name = "raft-client"
path = "src/bin/client.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
